@@ -95,6 +95,8 @@ struct _SoupMessagePrivate {
 	SoupErrorCode   errorcode;
 
 	gpointer        digest_data;
+
+	guint           msg_flags;
 };
 
 typedef struct {
